--- a/icons/128x128/Makefile.am
+++ b/icons/128x128/Makefile.am
@@ -1,6 +1,9 @@
 iconsdir = $(datadir)/icons/hicolor/128x128/apps
-icons_DATA = org.xfce.panel.cpuheatmap.png
+icons_DATA = ../scalable/org.xfce.panel.cpuheatmap.svg
 EXTRA_DIST = $(icons_DATA)
 
-update:
-	inkscape -o org.xfce.panel.cpuheatmap.png ../scalable/org.xfce.panel.cpuheatmap.svg
+all: org.xfce.panel.cpuheatmap.png
+	
+org.xfce.panel.cpuheatmap.png: ../scalable/org.xfce.panel.cpuheatmap.svg
+	inkscape -e org.xfce.panel.cpuheatmap.png -w 128 -h 128 -z ../scalable/org.xfce.panel.cpuheatmap.svg
+
