--- a/icons/16x16/Makefile.am
+++ b/icons/16x16/Makefile.am
@@ -1,8 +1,8 @@
 iconsdir = $(datadir)/icons/hicolor/16x16/apps
-icons_DATA = ../scalable/org.xfce.panel.cpuheatmap.svg
+icons_DATA = org.xfce.panel.cpuwaterfall.png
 EXTRA_DIST = $(icons_DATA)
 
-all: org.xfce.panel.cpuheatmap.png
+all: org.xfce.panel.cpuwaterfall.png
 
-org.xfce.panel.cpuheatmap.png: ../scalable/org.xfce.panel.cpuheatmap.svg
-	inkscape -e org.xfce.panel.cpuheatmap.png -w 16 -h 16 -z ../scalable/org.xfce.panel.cpuheatmap.svg
+org.xfce.panel.cpuwaterfall.png: ../scalable/org.xfce.panel.cpuwaterfall.svg
+	inkscape -e org.xfce.panel.cpuwaterfall.png -w 16 -h 16 -z ../scalable/org.xfce.panel.cpuwaterfall.svg
