--- a/icons/scalable/Makefile.am
+++ b/icons/scalable/Makefile.am
@@ -1,3 +1,3 @@
 iconsdir = $(datadir)/icons/hicolor/scalable/apps
-icons_DATA = org.xfce.panel.cpuheatmap.svg
+icons_DATA = org.xfce.panel.cpuwaterfall.svg
 EXTRA_DIST = $(icons_DATA)
