--- a/panel-plugin/cpuwaterfall.desktop.in
+++ b/panel-plugin/cpuwaterfall.desktop.in
@@ -1,9 +1,9 @@
 [Xfce Panel]
 Type=X-XFCE-PanelPlugin
 Encoding=UTF-8
-_Name=CPU Heatmap
+_Name=CPU Waterfall
 _Comment=Graphical representation of the CPU load
-Icon=org.xfce.panel.cpuheatmap
-X-XFCE-Module=cpuheatmap
+Icon=org.xfce.panel.cpuwaterfall
+X-XFCE-Module=cpuwaterfall
 X-XFCE-Unique=FALSE
 X-XFCE-API=2.0
